<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Not yet implemented!</string>
    <string name="app_name">Playphone SDK Demo</string>
    <!-- Virtual Item pages -->
    <string name="vitems_description">These are the items used in the game</string>
    <string name="playphone_store_description">Users can purchase these items on the Playphone Store</string>
    <string name="user_inventory_description">Inventory can be tracked per user</string>
    <string name="get_virtual_items">Get Virtual Items</string>
    <string name="get_virtual_currencies">Get Virtual Currencies</string>
    <string name="get_vshop_categories_list">VShop Categories List</string>
    <string name="get_vshop_packs_list">VShop Packs List</string>
    <string name="get_buy_vshop_packs">Buy VShop Packs</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="hide_launcher_icon">Hide Launcher Icon</string>
    <string name="show_launcher_icon">Show Launcher Icon</string>
    <string name="show_dashboard">Show Dashboard</string>
    <string name="inventory_list">Inventory List</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="crash_toast_text">Oops! Playphone SDK demo has crashed, but a crash report has been sent to the developers to help them fix the issue!</string>
</resources>
